[gd_scene load_steps=33 format=3 uid="uid://bh4ukwstrbqhb"]

[ext_resource type="Script" path="res://player/player.gd" id="1_d43uk"]
[ext_resource type="Texture2D" uid="uid://bkf325buucdwf" path="res://assets/textures/player/player_idle.png" id="2_6xymu"]
[ext_resource type="Texture2D" uid="uid://ipjdp6e1mhyd" path="res://assets/textures/player/player_walk.png" id="3_bpf58"]
[ext_resource type="PackedScene" uid="uid://bi0b6s5cj150p" path="res://utility/health.tscn" id="4_0be6l"]
[ext_resource type="Script" path="res://player/skills/nova_cast.gd" id="5_2ctr2"]
[ext_resource type="PackedScene" uid="uid://0snat8gew3f2" path="res://utility/hurtbox.tscn" id="5_so4pg"]
[ext_resource type="PackedScene" uid="uid://cjjncs3xcl7dl" path="res://spells/nova.tscn" id="6_bqjkq"]
[ext_resource type="Texture2D" uid="uid://b7sjjru25r26s" path="res://assets/textures/GUI/exp_background.png" id="6_ij00g"]
[ext_resource type="Texture2D" uid="uid://cnryh4cv5nm8i" path="res://assets/textures/GUI/exp_progress.png" id="7_c6b3n"]
[ext_resource type="Texture2D" uid="uid://c513rdcu064a4" path="res://assets/textures/GUI/health_background.png" id="8_55c3j"]
[ext_resource type="Texture2D" uid="uid://d5w6qjoyo8xx" path="res://assets/textures/GUI/health_progress.png" id="9_mvg3m"]
[ext_resource type="PackedScene" uid="uid://dx1cp2udrmlu8" path="res://menu/button.tscn" id="10_8p8k2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8h5bo"]
atlas = ExtResource("2_6xymu")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_abwr3"]
atlas = ExtResource("2_6xymu")
region = Rect2(0, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnunf"]
atlas = ExtResource("2_6xymu")
region = Rect2(0, 96, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofdmy"]
atlas = ExtResource("2_6xymu")
region = Rect2(0, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_00atc"]
atlas = ExtResource("2_6xymu")
region = Rect2(0, 192, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7r54y"]
atlas = ExtResource("2_6xymu")
region = Rect2(0, 240, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_86xoa"]
atlas = ExtResource("3_bpf58")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8agvc"]
atlas = ExtResource("3_bpf58")
region = Rect2(0, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhdkb"]
atlas = ExtResource("3_bpf58")
region = Rect2(0, 96, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ou8rp"]
atlas = ExtResource("3_bpf58")
region = Rect2(0, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7u7em"]
atlas = ExtResource("3_bpf58")
region = Rect2(0, 192, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bixtp"]
atlas = ExtResource("3_bpf58")
region = Rect2(0, 240, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wms5w"]
atlas = ExtResource("3_bpf58")
region = Rect2(0, 288, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7aj44"]
atlas = ExtResource("3_bpf58")
region = Rect2(0, 336, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_7t53a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h5bo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abwr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnunf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofdmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00atc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7r54y")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_86xoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8agvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhdkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ou8rp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7u7em")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bixtp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wms5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7aj44")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_na0qv"]
radius = 4.0
height = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_erng2"]
radius = 380.426

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7crn3"]
size = Vector2(12, 26)

[sub_resource type="CircleShape2D" id="CircleShape2D_ptn1n"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_26jdg"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 4
motion_mode = 1
script = ExtResource("1_d43uk")
metadata/_edit_group_ = true

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_7t53a")
animation = &"walk"
frame = 4
frame_progress = 0.537721
speed_scale = 2.0

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_na0qv")

[node name="Health" parent="." node_paths=PackedStringArray("hurtbox") instance=ExtResource("4_0be6l")]
max_health = 100
hurtbox = NodePath("../Hurtbox")

[node name="Skills" type="Node" parent="."]

[node name="FireCast" type="Node" parent="Skills"]

[node name="Detector" type="Area2D" parent="Skills/FireCast"]
visible = false
collision_layer = 0
collision_mask = 4

[node name="AreaDetection" type="CollisionShape2D" parent="Skills/FireCast/Detector"]
shape = SubResource("CircleShape2D_erng2")

[node name="Timer" type="Timer" parent="Skills/FireCast"]
autostart = true

[node name="CastTimer" type="Timer" parent="Skills/FireCast"]
wait_time = 0.075
one_shot = true

[node name="NovaCast" type="Node" parent="Skills"]
script = ExtResource("5_2ctr2")
nova_scene = ExtResource("6_bqjkq")

[node name="Timer" type="Timer" parent="Skills/NovaCast"]

[node name="Camera" type="Camera2D" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource("5_so4pg")]
visible = false
collision_layer = 0
collision_mask = 2
HurtboxTypes = 0

[node name="Collision" parent="Hurtbox" index="0"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_7crn3")

[node name="GrabItems" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="GrabItems"]
shape = SubResource("CircleShape2D_ptn1n")

[node name="CollectItems" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="CollectItems"]
shape = SubResource("CircleShape2D_26jdg")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="ExpBar" type="TextureProgressBar" parent="GUILayer/GUI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 20.0
grow_horizontal = 2
texture_under = ExtResource("6_ij00g")
texture_progress = ExtResource("7_c6b3n")

[node name="Level" type="Label" parent="GUILayer/GUI/ExpBar"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.89375
anchor_right = 1.0
anchor_bottom = 1.15
grow_horizontal = 0
theme_override_font_sizes/font_size = 14
text = "Level 999"
metadata/_edit_use_anchors_ = true

[node name="HealthBar" type="TextureProgressBar" parent="GUILayer/GUI"]
self_modulate = Color(1, 1, 1, 0.588235)
layout_mode = 0
anchor_left = 0.475
anchor_top = 0.555556
anchor_right = 0.525
anchor_bottom = 0.577778
offset_right = 1.52588e-05
texture_under = ExtResource("8_55c3j")
texture_progress = ExtResource("9_mvg3m")
metadata/_edit_use_anchors_ = true

[node name="LevelUp" type="Panel" parent="GUILayer/GUI"]
process_mode = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 1.25
anchor_top = 0.152778
anchor_right = 1.5625
anchor_bottom = 0.847222
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="GUILayer/GUI/LevelUp"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.2
grow_horizontal = 2
text = "Level Up !"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Options" type="VBoxContainer" parent="GUILayer/GUI/LevelUp"]
layout_mode = 0
anchor_left = 0.05
anchor_top = 0.2
anchor_right = 0.95
anchor_bottom = 0.4
metadata/_edit_use_anchors_ = true

[node name="Pause" type="Panel" parent="GUILayer/GUI"]
process_mode = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.34375
anchor_top = -0.833333
anchor_right = 0.65625
anchor_bottom = -0.138889
grow_horizontal = 2
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="GUILayer/GUI/Pause"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.2
grow_horizontal = 2
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Continue" parent="GUILayer/GUI/Pause" instance=ExtResource("10_8p8k2")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.8
anchor_right = 0.75
anchor_bottom = 0.94
offset_right = 0.0
offset_bottom = 5.96046e-07
grow_horizontal = 2
grow_vertical = 0
text = "Continue"
metadata/_edit_use_anchors_ = true

[node name="Clock" type="Label" parent="GUILayer/GUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.46875
anchor_top = 0.0555556
anchor_right = 0.53125
anchor_bottom = 0.119444
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelTimer" type="Timer" parent="GUILayer/GUI"]
autostart = true

[connection signal="body_entered" from="Skills/FireCast/Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="Skills/FireCast/Detector" to="." method="_on_detector_body_exited"]
[connection signal="timeout" from="Skills/FireCast/Timer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="Skills/FireCast/CastTimer" to="." method="_on_fire_cast_timer_timeout"]
[connection signal="timeout" from="Skills/NovaCast/Timer" to="Skills/NovaCast" method="_on_timer_timeout"]
[connection signal="area_entered" from="GrabItems" to="." method="_on_grab_items_area_entered"]
[connection signal="area_entered" from="CollectItems" to="." method="_on_collect_items_area_entered"]
[connection signal="pressed" from="GUILayer/GUI/Pause/Continue" to="." method="_on_continue_pressed"]
[connection signal="timeout" from="GUILayer/GUI/LevelTimer" to="." method="_on_level_timer_timeout"]

[editable path="Hurtbox"]
